# template_users_service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  justfile  mypy.ini  private.key.template  public.key.template  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: run_tests.yaml
config/: config.dev.template.toml  config.dev.toml  config.prod.template.toml  config.prod.toml
grafana/provisioning/datasources/: loki.yml
migrations/: env.py
migrations/versions/: 20240122-000122_init_tables_dd86848926e7.py  79a0245d3810_init_tables.py  fcf0564db27f_init_tables.py
prometheus/: prometheus.yml
src/: __main__.py  config.py
src/application/: __main__.py  broker_init.py  config.py  endpoints_init.py  main.py  metrics_init.py  routers_init.py  swagger.py
src/application/api/: config.py  endpoints.py  exception_handler.py  swagger.py
src/application/api/endpoints/: __init__.py  common.py
src/application/api/responses/: orjson.py
src/application/api/security/: permission_check.py
src/application/di/: di_builder.py
src/application/middlewares/: apidoc_auth.py  context.py  main.py  prometheus.py  structlog.py
src/application/prometheus/: constants.py  metrics.py
src/application/uvicorn_log/: main.py  uvicorn_logger.py
src/auth/: __init__.py  config.py  constants.py  exceptions.py  jwt.py  permission.py  schemas.py  utils.py
src/auth/common/: jwt.py
src/common/: constants.py  exceptions.py
src/common/interfaces/: reader.py  repository.py  uow.py
src/core/auth/: __init__.py  config.py  exceptions.py  jwt.py  permission.py  schemas.py  stubs.py
src/core/auth/common/: jwt.py
src/core/common/: __init__.py  constants.py  dtos.py  exceptions.py
src/core/common/interfaces/: service.py  use_case.py
src/core/common/schemas/: base_responses.py
src/core/database/: __init__.py  exceptions.py
src/core/database/migrations/: env.py
src/core/database/postgres/: config.py  main.py  models.py  schemas.py  uow.py
src/core/log/: config.py  logger.py  main.py  processors.py
src/core/message_queue/: broker.py  config.py  constants.py  exceptions.py  exchanges.py  main.py
src/core/message_queue/common/: broker.py
src/core/utils/: config_loader.py
src/database/: __init__.py  config.py  exceptions.py  main.py  models.py  uow.py
src/database/migrations/: env.py
src/database/migrations/versions/: e8e88b913905_init_user_table.py  ef767d711beb_update_column_type_hashed_password.py
src/database/postgres/: config.py  main.py  models.py  schemas.py  uow.py
src/modules/users/: __init__.py  adapters.py  dtos.py  endpoints.py  exceptions.py  models.py  reader.py  repository.py  schemas.py  service.py  stubs.py  uow.py  utils.py
src/modules/users/common/: reader.py  repository.py
src/modules/users/endpoints/: admin.py  users.py
src/modules/users/models/: __init__.py  user.py  users.py
src/modules/users/repos/: reader.py  repository.py
src/modules/users/schemas/: __init__.py  dtos.py  requests_schemas.py  responses_schemas.py
src/modules/users/use_cases/: __init__.py  check_valid_user.py  create_user.py  delete_user.py  get_user_by_email.py  get_user_by_id.py  (+3 more)
src/utils/: config_loader.py
tests/integration/: conftest.py
tests/integration/migrations/: test_migrations.py
tests/integrinity/: conftest.py
tests/integrinity/src/: test_pupu.py
vector/: vector.toml
(+29 files in other folders)
