[tool.poetry]
name = "src"
version = "0.1.0"
description = "Backend Template"
authors = ["Danila Safonov <danil.sapog19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
alembic = "^1.13.0"


[tool.poetry.group.tools.dependencies]
pre-commit = "^3.5.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.7.1"
ruff = "^0.1.7"
black = "^23.11.0"
isort = "^5.12.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
